# roi_convertor

./: .gitignore  README.md  pyproject.toml  setup.py
scripts/: 0.9 Batch Convert .lux.h5 or .h5 to KLB and MIPs.ipynb  1.0 Batch Convert .lux.h5 or .h5 to KLB and MIPs.ipynb  1.2 Batch Convert .lux.h5 or .h5 to KLB and MIPs.ipynb  1.3 Batch Convert .lux.h5 or .h5 to KLB and MIPs.ipynb  1.4 Batch Convert .lux.h5 or .h5 to KLB and MIPs.ipynb  1.5 Batch Convert .lux.h5 or .h5 to KLB and MIPs.ipynb  runGenCropImages.cmd  runGenCropboxes.cmd  runGenMasks.cmd  runRescaling.cmd  runVizCropboxes.cmd
src/roi_convertor/: __main__.py  gen_analytics.py  gen_crops.py  gen_diff_rois.py  gen_rois.py  gen_tif.py  io_utils.py  read_roi.py  roi.py  roi_decoder.py  roi_encoder.py
test/: download_test_data.py  test_gen_crop.py  test_gen_mask.py  test_gen_roi.py  test_utils.py
